--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -1,3 +1,8 @@
+1.0.1-beta
+==============
+- Rename the log functions.
+- Add withTV method to the collection class.
+
 1.0.0-beta
 ==============
 - Initial release.
