--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -4,7 +4,7 @@
 - Added function "img".
 - Added method "whereExists" to the collection class.
 - Added method "whereNotExists" to the collection class.
-- Added method "addRows" to the collection class.
+- Added method "elements" to the collection class.
 
 1.0.2-beta
 ==============
