Update documentation and add login and logout functions.

--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -1,3 +1,6 @@
+- Added function "login".
+- Added function "logout".
+
 1.2.0-beta
 ==============
 - Added function "load_model" for custom table.
