--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -1,5 +1,9 @@
+1.3.0-beta
+==============
 - Added function "login".
 - Added function "logout".
+- Added function "is_ajax".
+- Fixed some bugs.
 
 1.2.0-beta
 ==============
