--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -1,3 +1,10 @@
+3.2.0-beta
+==============
+- Added a new function "response".
+- Renamed files of the classes.
+- In the functions chunk() and snippet() you can specify the name with a relative path (if you use file elements).
+- Added file "config/config.php" to add custom system settings. Can be helpful in testing mode.
+
 3.1.1-beta
 ==============
 - Fixed broken compatibility with PHP 5.5.
