--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -1,5 +1,11 @@
 Changelog for modHelpers.
 
+3.5.0-beta
+==============
+- New function "string".
+- New function "str_concat".
+- Fixed the bug with the email function.
+
 3.4.0-beta
 ==============
 - Added new function "first".
