--- a/core/components/modhelpers/docs/changelog.txt
+++ b/core/components/modhelpers/docs/changelog.txt
@@ -1,5 +1,9 @@
 Changelog for modHelpers.
 
+3.7.0-pl
+==============
+- Added new function "get_exec_args".
+
 3.7.0-beta
 ==============
 - Added new function "exec_bg_script".
